--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(lnlpp CXX)
+project(lnl CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -8,10 +8,10 @@ file(GLOB_RECURSE sources
         "src/*.cpp"
         "include/*.h")
 
-add_executable(lnlpp ${sources})
-target_include_directories(lnlpp PRIVATE ${CMAKE_SOURCE_DIR}/include)
+add_executable(lnl ${sources})
+target_include_directories(lnl PRIVATE ${CMAKE_SOURCE_DIR}/include)
 add_compile_definitions(WIN32_LEAN_AND_MEAN)
-target_link_libraries(lnlpp PRIVATE wsock32 ws2_32)
+target_link_libraries(lnl PRIVATE wsock32 ws2_32)
 
 find_package(fmt CONFIG REQUIRED)
-target_link_libraries(lnlpp PRIVATE fmt::fmt)
+target_link_libraries(lnl PRIVATE fmt::fmt)
