--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,9 @@ file(GLOB_RECURSE sources
 add_executable(lnl ${sources})
 target_include_directories(lnl PRIVATE ${CMAKE_SOURCE_DIR}/include)
 add_compile_definitions(WIN32_LEAN_AND_MEAN)
-target_link_libraries(lnl PRIVATE wsock32 ws2_32)
+
+if (WIN32)
+    target_link_libraries(lnl PRIVATE wsock32 ws2_32)
+elseif (UNIX)
+    target_link_libraries(lnl PRIVATE pthread)
+endif ()
