Fixed typo in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB_RECURSE sources
 option(BUILD_EXAMPLE "Build the example app" ON)
 
 add_library(lnl STATIC ${sources})
-target_include_directories(lnl PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(lnl PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 if (WIN32)
     add_compile_definitions(WIN32_LEAN_AND_MEAN)
@@ -22,10 +22,10 @@ endif ()
 
 if (BUILD_EXAMPLE)
     add_executable(lnl_example_server example/server.cpp)
-    target_include_directories(lnl_example_server PRIVATE ${CMAKE_SOURCE_DIR}/include)
+    target_include_directories(lnl_example_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
     target_link_libraries(lnl_example_server PRIVATE lnl)
 
     add_executable(lnl_example_client example/client.cpp)
-    target_include_directories(lnl_example_client PRIVATE ${CMAKE_SOURCE_DIR}/include)
+    target_include_directories(lnl_example_client PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
     target_link_libraries(lnl_example_client PRIVATE lnl)
 endif ()
