Make unit tests optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,5 +31,7 @@ if (BUILD_EXAMPLE)
     target_link_libraries(lnl_example_client PRIVATE lnl)
 endif ()
 
-enable_testing()
-add_subdirectory(tests)
+if (BUILD_AND_RUN_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif ()
